fix image preload blurring effect

--- a/src/js/components/Application.less
+++ b/src/js/components/Application.less
@@ -93,6 +93,7 @@ a.active {
 }
 
 #page-content-wrapper {
+  background: @brand-grey;
   width: 100%;
 
   &.container,
