--- a/src/js/components/SideBar/SideBar.less
+++ b/src/js/components/SideBar/SideBar.less
@@ -135,7 +135,7 @@
   .sidebar-wrapper {
     padding-top: 15px;
     .sidebar-nav {
-      padding: (@app-padding) 0 0 0;
+      padding: (@app-padding * 0.5) 0 0 0;
     }
   }
 
